Fixed problem with header not showing at top of page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,9 +22,18 @@ a {
     background-color: #fff;
     position: absolute;
     width: 100%;
-    top: 200px;
+    top: 0px;
 
     z-index: 3;
+}
+
+#header-pic{
+    position: relative;
+    top: auto;
+    bottom: auto;
+    background-position: top center;
+   
+
 }
 
 
@@ -50,8 +59,9 @@ a {
     display: block;
     font-size: 300%;
     text-decoration: none;
-    padding: 10px 20px;
+    padding: 0px 20px;
     font-weight: 600;
+    letter-spacing: 5px;
 }
 
 .header .menu{
@@ -162,4 +172,11 @@ h1, h2 {
     transform: translate(-50%, -50%);
     text-transform: uppercase;
     font-size: 400%;
+}
+
+
+#footer{
+    position: fixed;
+    bottom: 0;
+    
 }
